--- a/src/pages/articles/[article].astro
+++ b/src/pages/articles/[article].astro
@@ -115,8 +115,12 @@ if (art.title.toUpperCase() == art.title) {
         }
 </script>
 
-<style>
+<style is:inline>
     img {
         margin: 1em;
+    }
+
+    a {
+        word-wrap: break-word;
     }
 </style>
