--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -124,5 +124,6 @@ const { title, noShout } = Astro.props;
 		top: 50%;
 		left: 50%;
 		transform: translate(-100%, -50%);
+		position: fixed;
 	}
 </style>
