--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -125,4 +125,19 @@ const { title, noShout } = Astro.props;
 		left: 50%;
 		transform: translate(-100%, -50%);
 	}
+
+	a, code, pre {
+        word-wrap: break-word;
+    }
+
+	@media (prefers-color-scheme: dark) {
+		:root {
+			background-color: rgb(6, 6, 7);
+			color: whitesmoke;
+		}
+
+		a {
+			color: aqua;
+		}
+	}
 </style>
